name:                glabrous
version:             2.0.6
synopsis:            A template DSL library
description:         A minimalistic, Mustache-like syntax, truly logic-less,
                     pure Text template DSL library
homepage:            https://github.com/MichelBoucey/glabrous
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@gmail.com
copyright:           (c) 2016-2022 - Michel Boucey
category:            Text, Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Tested-With: GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.1

source-repository head
  type:     git
  location: git://github.com/MichelBoucey/glabrous.git

library
  hs-source-dirs:      src
  exposed-modules:     Text.Glabrous
                     , Text.Glabrous.Types
  other-modules:       Text.Glabrous.Internal
  build-depends:       aeson
                     , aeson-pretty
                     , attoparsec
                     , base >= 4.8 && < 5
                     , bytestring
                     , cereal
                     , cereal-text
                     , either
                     , text
                     , unordered-containers

  default-language:    Haskell2010
  GHC-options:         -Wall

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             hspec.hs
  build-depends:       base >= 4.8 && < 5
                     , directory
                     , either
                     , glabrous
                     , hspec
                     , text
                     , unordered-containers
  default-language:    Haskell2010

